Fixed blog post link spacing

--- a/src/components/bluprint-detail/index.css
+++ b/src/components/bluprint-detail/index.css
@@ -14,6 +14,10 @@
   margin-bottom: 36px;
 }
 
+.BluprintDetail-blogLink {
+  display: inline-block;
+  margin-bottom: 12px;
+}
 
 .BluprintDetail-icon {
   margin: 0 auto;
